Added "back to main page" button on privacy pg and thank you pg

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -47,6 +47,12 @@ span.glyphicon{
   line-height: 1.8em;
 }
 
+.btn-lg{
+  padding-top:12px;
+  padding-bottom:12px;
+  border-radius: 4px;
+}
+
 
 /**Hero Section**/
 .main_headline{
@@ -97,7 +103,7 @@ span.glyphicon{
 
 
 .about_the_service, section.content {
-  background-color: @light-background;
+  background-color:#fff;
   p, h2 {
     text-align: left;
     max-width: 72rem;
@@ -209,9 +215,6 @@ p.step_headline{
 }
 
 
-/**Contact Info**/
-
-
 /**Apply backup**/
 h2.time_expectation{
   font-weight: 700;
@@ -242,6 +245,14 @@ h2.time_expectation{
 
 .privacy_description ul{
   list-style-type: circle;
+}
+
+.privacy h2{
+  color: @splash-background;
+}
+
+.back_home_btn{
+  margin-top:50px;
 }
 
 
