Fixing column spacing

--- a/typeseam/templates/privacy_policy.html
+++ b/typeseam/templates/privacy_policy.html
@@ -98,11 +98,13 @@
 
           <div class="back_home_btn">
             <div class="row">
-              <a href="/" class="btn btn-default btn-lg call_to_action_button">
-                <span class="main-action-text">
-                  {{ content.back_home_btn }}
-                </span>
-              </a>
+              <div class="col-xs-12">
+                <a href="/" class="btn btn-default btn-lg call_to_action_button">
+                  <span class="main-action-text">
+                    {{ content.back_home_btn }}
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
 
