fix mobile button width

--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -23,7 +23,7 @@
           </p>
 
           <div class="row">
-            <div class="col-md-4 col-sm-5" id="learn-more-button">
+            <div class="col-md-4 col-sm-5">
               <a href="#learn_more_section" class="btn btn-default btn-lg call_to_action_button text-center">
                 <span class="main-action-text">
                   {{ content.learn_more_button }}
