--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -152,11 +152,8 @@
             </h4>
             <div class="col-xs-12 col-sm-12">
               <ul class="eligibility_list">
-                <li>Currently serving a sentence</li>
-                <li>Currently being charged with a crime</li>
-                <li>Currently on probation</li>
-                <li>Convicted for rape or child molestation</li>
                 <li>Convicted of murder</li>
+                <li>Convicted of rape or child molestation</li>
                 <li>On the sex offender registry</li>
                 <li>Convicted of any superstrikes</li>
               </ul>
