Add to DB button

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -17,7 +17,7 @@ h2 {
 h3 { font-size:22px; }
 h3.subheadline { margin-top:0; margin-bottom:40px; }
 
-h4{
+h4 {
   font-weight: 700;
 }
 
@@ -30,7 +30,7 @@ h4{
   padding-bottom: 20px;
 }
 
-span.glyphicon{
+li > span.glyphicon:first-child {
   padding-right:10px;
 }
 
@@ -364,9 +364,10 @@ section.footer.container.new_section{
   list-style-type: disc;
 }
 
-.typeform_wrapper {
-  height: 100%;
+
+.applications_list span.glyphicon-ok-sign {
+  font-size: 1.2em;
+  color: @brand-success;
+  padding-right: .3em;
 }
-html, body {
-  height: 100%;
-}
+
