--- a/typeseam/templates/app_index.html
+++ b/typeseam/templates/app_index.html
@@ -6,13 +6,14 @@
 		<h1>Applications</h1>
 	</div>
 	<div class="row">
-		<table class="table">
+		<table class="table applications_list">
 		<tr>
 			<th>Date</th>
 			<th>Last Name</th>
 			<th>First Name</th>
 			<th>Intake PDF</th>
 			<th>Opened by Aleem</th>
+			<th>Added to DB</th>
 		</tr>
 		{% for app in submissions %}
 		<tr>
@@ -25,7 +26,27 @@
 						submission_uuid=app.submission.uuid
 						) }}">{{ app.submission.uuid[-8:] }}</a>
 			</td> 
-			<td>{{ app.submission.date_opened_or_not(app.logs) }}</td>
+			<td>
+			{%- set opened = app.submission.was_opened(app.logs) %}
+			{% if opened %}
+			{{ human(opened, precision=1) }}
+			{%- else -%}------------{% endif %}
+			</td>
+			<td>
+			{%- set added = app.submission.was_added(app.logs) %}
+			{% if added %}
+			<span class="glyphicon glyphicon-ok-sign"></span>
+			Added {{ human(added, precision=1) }}
+			{%- else -%}
+			<a class="btn btn-default" href="{{
+				url_for(
+					'form_filler.mark_as_added',
+					submission_uuid=app.submission.uuid
+						) }}">
+			<span class="glyphicon glyphicon-plus"></span> Mark as added
+						</a>
+			{% endif %}
+			</td>
 			
 		</tr>
 		{% endfor %}
