add app deletion

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -370,4 +370,14 @@ section.footer.container.new_section{
   color: @brand-success;
   padding-right: .3em;
 }
+.delete {
+  .btn-lg + .btn-lg {
+    margin-left: 1em;
+  }
+}
 
+.iframe_container {
+  width: 600px;
+  height: 400px;
+  background-color: #ccc;
+}
