--- a/typeseam/templates/app_index.html
+++ b/typeseam/templates/app_index.html
@@ -14,6 +14,7 @@
 			<th>Intake PDF</th>
 			<th>Opened by Aleem</th>
 			<th>Added to DB</th>
+			<th>Delete?</th>
 		</tr>
 		{% for app in submissions %}
 		<tr>
@@ -33,21 +34,28 @@
 			{%- else -%}------------{% endif %}
 			</td>
 			<td>
-			{%- set added = app.submission.was_added(app.logs) %}
-			{% if added %}
-			<span class="glyphicon glyphicon-ok-sign"></span>
-			Added {{ human(added, precision=1) }}
-			{%- else -%}
-			<a class="btn btn-default" href="{{
-				url_for(
-					'form_filler.mark_as_added',
-					submission_uuid=app.submission.uuid
-						) }}">
-			<span class="glyphicon glyphicon-plus"></span> Mark as added
-						</a>
-			{% endif %}
+				{%- set added = app.submission.was_added(app.logs) %}
+				{% if added %}
+				<span class="glyphicon glyphicon-ok-sign"></span>
+				Added {{ human(added, precision=1) }}
+				{%- else -%}
+				<a class="btn btn-default" href="{{
+					url_for(
+						'form_filler.mark_as_added',
+						submission_uuid=app.submission.uuid
+							) }}">
+				<span class="glyphicon glyphicon-plus"></span>
+				Mark as added
+				</a>
+				{% endif %}
 			</td>
-			
+			<td>
+				<a class="btn btn-default btn-sm delete" href="{{ url_for('form_filler.delete_page',
+						submission_uuid=app.submission.uuid) }}">
+					<span class="glyphicon glyphicon-remove"></span>
+					Delete
+				</a>
+			</td>
 		</tr>
 		{% endfor %}
 			
