make email notifications automatic

--- a/typeseam/templates/app_index.html
+++ b/typeseam/templates/app_index.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
 	<div class="row">
-		<h1>Applications</h1>
+		<h1>Clean Slate Applications</h1>
 	</div>
 	<div class="row">
 		<table class="table applications_list">
