--- a/typeseam/templates/app_bundle.html
+++ b/typeseam/templates/app_bundle.html
@@ -43,7 +43,9 @@
 
 		<div class="row">
 			<div class="iframe_container">
-				<iframe class="pdf_inset" src="{{ url_for('form_filler.unopened_apps_pdf') }}" frameborder="0" width="800" height="600"></iframe>
+				<iframe class="pdf_inset" src="{{
+					url_for('form_filler.get_multiple_filled_pdfs', keys=uuids)
+					}}" frameborder="0" width="800" height="600"></iframe>
 			</div>
 		</div>
 		{% endif %}
